--- a/webhook/Dockerfile
+++ b/webhook/Dockerfile
@@ -5,15 +5,8 @@ FROM almir/webhook:${WEBHOOK_VERSION}
 # RUN  apk --update --upgrade add git bash jq openssh
 RUN  apk --update --upgrade add git bash jq openssh docker-compose
 
-# Add user
-# RUN addgroup -S webhook && adduser -D -u 1000 -s /bin/bash -G webhook webhook
-
-# Change ownership of opt
-# RUN chown webhook:webhook -R /opt
-
 COPY ./hooks/hooks.yml /etc/webhook/hooks.yml
 
-# Change current user to webhook
-# USER webhook
+RUN echo "StrictHostKeyChecking no" >> /etc/ssh/ssh_config
 
 CMD ["-verbose", "-hooks=/etc/webhook/hooks.yml", "-hotreload", "-template"]
