feat: add curl to webhook container

--- a/webhook/Dockerfile
+++ b/webhook/Dockerfile
@@ -3,7 +3,7 @@ ARG WEBHOOK_VERSION=2.8.0
 FROM almir/webhook:${WEBHOOK_VERSION}
 
 # RUN  apk --update --upgrade add git bash jq openssh
-RUN  apk --update --upgrade add git bash jq openssh docker docker-compose
+RUN  apk --update --upgrade add git bash jq openssh docker docker-compose curl
 
 COPY ./hooks/hooks.yml /etc/webhook/hooks.yml
 
