feat: add oathkeeper keto and kratos

--- a/.env.example
+++ b/.env.example
@@ -263,7 +263,31 @@ DRONE_WEBHOOK_ENDPOINT=http://postb.in/b/cajf7cIU
 DRONE_WEBHOOK_EVENTS=user:created,build,repo
 # Shared secret used to create an http-signature. The webhook recipient can use
 # the shared secret to verify request authenticity.
-DRONE_WEBHOOK_SECRET=dron-webhook-secret
+DRONE_WEBHOOK_SECRET=drone-webhook-secret
 # Boolean value disables TLS verification when establishing a connection to the
 # remote webhook address. The default value is false.
 DRONE_WEBHOOK_SKIP_VERIFY=false
+
+### OATHKEEPER #########################################
+OATHKEEPER_VERSION=v0.38.9-beta.1
+OATHKEEPER_PROXY_SUBDOMAIN=gwproxy
+OATHKEEPER_PROXY_PORT=4455
+OATHKEEPER_API_SUBDOMAIN=gwapi
+OATHKEEPER_API_PORT=4456
+
+### KETO #########################################
+KETO_DSN=postgres://keto:secret@postgres:5432/keto?sslmode=disable
+KETO_VERSION=v0.5.6-alpha.1
+KETO_PORT=4466
+
+### KRATOS #########################################
+KRATOS_DSN=postgres://kratos:secret@postgres:5432/kratos?sslmode=disable&max_conns=20&max_idle_conns=4
+KRATOS_VERSION=v0.5.5-alpha.1
+KRATOS_PUBLIC_SUBDOMAIN=kratos
+KRATOS_PUBLIC_PORT=4433
+KRATOS_ADMIN_SUBDOMAIN=admin.kratos
+KRATOS_ADMIN_PORT=4434
+KRATOS_MAIL_FRONT_SUBDOMAIN=mail.kratos
+KRATOS_MAIL_FRONT_PORT=4436
+KRATOS_MAIL_SERVICE_SUBDOMAIN=mail.kratos
+KRATOS_MAIL_SERVICE_PORT=4437
