feat: Modularize compose files

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DATA_PATH_HOST=~/.docker/data
 ### Docker compose files ##################################
 
 # Select which docker-compose files to include.
-COMPOSE_FILE=docker-compose.yml
+COMPOSE_FILE=docker-compose.mgmt.yml:docker-compose.yml
 
 WORKSPACE_TIMEZONE=Africa/Lusaka
 
@@ -161,6 +161,11 @@ PGADMIN_LISTEN_PORT=80
 TRAEFIK_VERSION=2.3
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
+
+### PORTAINER #############################################
+
+PORTAINER_ADMIN_PASSWORD='[insert password here]'
+PORTAINER_UI_PORT=9000
 
 ### REDIS #################################################
 
