--- a/.env.example
+++ b/.env.example
@@ -30,91 +30,11 @@ TUNNEL_URL=your.domain.tld
 # Local domain name
 DOMAIN_NAME=local.test
 
-### APPLICATION PORTS #################################################
-APP_CONTAINER_PORT=3000
-GRAPHQL_CONTAINER_PORT=4000
-PRISMA_CONTAINER_PORT=4466
+### APPLICATION PORTS ##############################
 STRAPI_CONTAINER_PORT=1337
-MONGO_EXPRESS_CONTAINER_PORT=8081
 LOGOWL_CONTAINER_PORT=2800
 WEBHOOK_CONTAINER_PORT=9000
-ADMINER_CONTAINER_PORT=8080
-PHPMYADMIN_CONTAINER_PORT=80
-PGADMIN_CONTAINER_PORT=80
-REDIS_WEBUI_CONTAINER_PORT=80
-ELASTICSEARCH_HOST_HTTP_PORT=9200
 FUSIONAUTH_CONTAINER_PORT=9011
-
-### MICROSERVICE CONTAINERS #################################################
-MS_DIR=microservices
-
-MS_ONE=authors
-MS_ONE_PORT=3333
-
-### API #################################################
-API_DATABASE_CLIENT=postgres
-API_DATABASE_HOST=postgres
-API_DATABASE_URL=jdbc:postgresql
-API_DATABASE_PORT=5432
-API_DATABASE_SRV=false
-# API_DATABASE_NAME=
-API_DATABASE_USER=default
-API_DATABASE_PASSWORD=FFjbJ2LQ5xpj9FYkae4CQNC
-API_DATABASE_ROOT_USER=root
-API_DATABASE_ROOT_PASSWORD=FFjbJ2LQ5xpj9FYkae4CQNC
-API_DATABASE_SSL=false
-API_DATABASE_AUTHENTICATION_DATABASE=admin
-
-### GRAPHQL_API #################################################
-GRAPHQL_API_ENV=development
-# Used to validate user sessions
-GRAPHQL_API_APP_SECRET=GRAPHQLAPIApplicationSecret
-
-# See BYCRYPT docs
-GRAPHQL_API_BCRYPT_SALT_ROUNDS=12
-GRAPHQL_PRISMA_FRONTEND_URL=
-GRAPHQL_PRISMA_BACKEND_URL=
-GRAPHQL_PRISMA_PLAYGROUND_URL=
-
-### PRISMA #################################################
-
-PRISMA_MANAGEMENT_API_SECRET=PrismaManagmentSecret
-PRISMA_MIGRATIONS=false
-PRISMA_CONNECTION_LIMIT=2
-# Used to access the Prisma API
-PRISMA_ENDPOINT=http://prisma:4466
-# .local.test
-PRISMA_SECRET=PrismaSecret
-
-
-### MYSQL #################################################
-
-MYSQL_VERSION=8
-MYSQL_DATABASE=${API_DATABASE_NAME}
-MYSQL_USER=${API_DATABASE_USERNAME}
-MYSQL_PASSWORD=${API_DATABASE_PASSWORD}
-MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=root
-MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
-
-### MARIADB ###############################################
-
-MARIADB_VERSION=bionic
-MARIADB_DATABASE=${API_DATABASE_NAME}
-MARIADB_USER=${API_DATABASE_USERNAME}
-MARIADB_PASSWORD=${API_DATABASE_PASSWORD}
-MARIADB_PORT=3306
-MARIADB_ROOT_PASSWORD=root
-MARIADB_ENTRYPOINT_INITDB=./mariadb/docker-entrypoint-initdb.d
-
-### POSTGRES ##############################################
-
-POSTGRES_VERSION=alpine
-POSTGRES_DB=${API_DATABASE_NAME}
-POSTGRES_USER=${API_DATABASE_USERNAME}
-POSTGRES_PASSWORD=${API_DATABASE_PASSWORD}
-POSTGRES_PORT=5432
-POSTGRES_ENTRYPOINT_INITDB=./postgres/docker-entrypoint-initdb.d
 
 ### WEBHOOK ###############################################
 
@@ -122,39 +42,6 @@ WEBHOOK_HOOKS_DIR=./webhook/hooks
 WEBHOOK_SCRIPTS_DIR=./webhook/scripts
 WEBHOOK_DEPLOY_REPOSITORY=${APP_CODE_PATH_HOST}
 WEBHOOK_VERSION=2.8.0
-
-### MONGODB ###############################################
-
-MONGO_VERSION=4.2.1
-MONGODB_PORT=27017
-MONGO_INITDB_ROOT_USERNAME=${API_DATABASE_USERNAME}
-MONGO_INITDB_ROOT_PASSWORD=${API_DATABASE_PASSWORD}
-MONGO_INITDB_DATABASE=${API_DATABASE_NAME}
-
-### MONGO-WEBUI ###############################################
-MONGO_WEBUI_PORT=3000
-MONGO_WEBUI_ROOT_URL=http://localhost
-MONGO_WEBUI_MONGO_URL=mongodb://mongo:27017/
-MONGO_WEBUI_INSTALL_MONGO=false
-
-### MONGO-EXPRESS ###############################################
-
-ME_CONFIG_MONGODB_SERVER=mongo
-ME_CONFIG_BASICAUTH_USERNAME=default
-ME_CONFIG_BASICAUTH_PASSWORD=secret
-ME_CONFIG_MONGODB_ENABLE_ADMIN=true
-ME_CONFIG_MONGODB_AUTH_DATABASE=${API_DATABASE_AUTHENTICATION_DATABASE}
-ME_CONFIG_MONGODB_AUTH_USERNAME=${API_DATABASE_USERNAME}
-ME_CONFIG_MONGODB_AUTH_PASSWORD=${API_DATABASE_PASSWORD}
-
-### ADMINER ###############################################
-ADMINER_DESIGN=galkaev
-
-### PGADMIN ###############################################
-PGADMIN_DEFAULT_EMAIL=user@local.test
-PGADMIN_DEFAULT_PASSWORD=secret
-PGADMIN_LISTEN_ADDRESS=0.0.0.0
-PGADMIN_LISTEN_PORT=80
 
 ### TRAEFIK #################################################
 
@@ -166,26 +53,6 @@ TRAEFIK_HOST_HTTPS_PORT=443
 
 PORTAINER_ADMIN_PASSWORD='[insert password here]'
 PORTAINER_UI_PORT=9000
-
-### REDIS #################################################
-
-REDIS_PORT=6379
-
-### REDIS CLUSTER #########################################
-
-REDIS_CLUSTER_PORT_RANGE=7000-7005
-
-### REDISWEBUI #########################################
-REDIS_WEBUI_USERNAME=default
-REDIS_WEBUI_PASSWORD=FFjbJ2LQ5xpj9FYkae4CQNC
-REDIS_WEBUI_CONNECT_HOST=redis
-REDIS_WEBUI_CONNECT_PORT=6379
-REDIS_WEBUI_PORT=9987
-
-### ELASTIC SEARCH #########################################
-ELK_VERSION=6.3.1
-ELASTICSEARCH_JAVA_OPTS=-Xms256m -Xmx256m
-ELASTICSEARCH_HOST_TRANSPORT_PORT=9300
 
 ### FUSIONAUTH #########################################
 FUSIONAUTH_VERSION=1.23.1
