fix: Comment MariaDB Dockerfile

--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -16,7 +16,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone &
 # COPY /certs/mariadb.dev.test-key.pem /etc/mysql/ssl/mariadb.dev.test-key.pem
 # COPY /certs/rootCA.pem /etc/mysql/ssl/rootCA.pem
 
-RUN chown -R mysql:root /etc/mysql/ssl/
+# RUN chown -R mysql:root /etc/mysql/ssl/
 
 COPY my.cnf /etc/mysql/conf.d/my.cnf
 
