fix: Fix Mongo Dockerfile

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -1,7 +1,7 @@
 ARG MONGO_VERSION=4.2.1
 FROM mongo:${MONGO_VERSION}
 
-COPY mongod.conf /etc/mongo/mongod.conf
+COPY mongod.conf.example /etc/mongo/mongod.conf
 
 VOLUME /data/db /data/configdb
 
