--- a/envs/.databases.env
+++ b/envs/.databases.env
@@ -1,16 +1,7 @@
-VOLUMES_DRIVER=local
-NETWORKS_DRIVER=bridge
+### Docker compose files ##################################
 
-WORKSPACE_TIMEZONE=Africa/Lusaka
-DATA_PATH_HOST=~/.docker/data
-
-### APPLICATION PORTS #################################################
-MONGO_EXPRESS_CONTAINER_PORT=8081
-ADMINER_CONTAINER_PORT=8080
-PHPMYADMIN_CONTAINER_PORT=80
-PGADMIN_CONTAINER_PORT=80
-REDIS_WEBUI_CONTAINER_PORT=80
-ELASTICSEARCH_HOST_HTTP_PORT=9200
+# Select which docker-compose files to include.
+COMPOSE_FILE=docker-compose.databases.yml
 
 ### DB CONFIG ###############################################
 DB_CONFIG_DATABASE_CLIENT=postgres
@@ -27,27 +18,23 @@ DB_CONFIG_DATABASE_SSL=false
 DB_CONFIG_DATABASE_AUTHENTICATION_DATABASE=admin
 
 ### MYSQL #################################################
-
 MYSQL_VERSION=8
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=root
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 ### MARIADB ###############################################
-
 MARIADB_VERSION=bionic
 MARIADB_PORT=3306
 MARIADB_ROOT_PASSWORD=root
 MARIADB_ENTRYPOINT_INITDB=./mariadb/docker-entrypoint-initdb.d
 
 ### POSTGRES ##############################################
-
 POSTGRES_VERSION=alpine
 POSTGRES_PORT=5432
 POSTGRES_ENTRYPOINT_INITDB=./postgres/docker-entrypoint-initdb.d
 
 ### MONGODB ###############################################
-
 MONGO_VERSION=4.2.1
 MONGODB_PORT=27017
 
@@ -58,30 +45,34 @@ MONGO_WEBUI_MONGO_URL=mongodb://mongo:27017/
 MONGO_WEBUI_INSTALL_MONGO=false
 
 ### MONGO-EXPRESS ###############################################
-
+MONGO_EXPRESS_CONTAINER_PORT=8081
 ME_CONFIG_MONGODB_SERVER=mongo
 ME_CONFIG_BASICAUTH_USERNAME=default
 ME_CONFIG_BASICAUTH_PASSWORD=secret
 ME_CONFIG_MONGODB_ENABLE_ADMIN=true
 
 ### ADMINER ###############################################
+ADMINER_CONTAINER_PORT=8080
 ADMINER_DESIGN=galkaev
 
+### PHPMYADMIN ###############################################
+PHPMYADMIN_CONTAINER_PORT=80
+
 ### PGADMIN ###############################################
+PGADMIN_CONTAINER_PORT=80
 PGADMIN_DEFAULT_EMAIL=user@local.test
 PGADMIN_DEFAULT_PASSWORD=secret
 PGADMIN_LISTEN_ADDRESS=0.0.0.0
 PGADMIN_LISTEN_PORT=80
 
 ### REDIS #################################################
-
 REDIS_PORT=6379
 
 ### REDIS CLUSTER #########################################
-
 REDIS_CLUSTER_PORT_RANGE=7000-7005
 
 ### REDISWEBUI #########################################
+REDIS_WEBUI_CONTAINER_PORT=80
 REDIS_WEBUI_USERNAME=default
 REDIS_WEBUI_PASSWORD=FFjbJ2LQ5xpj9FYkae4CQNC
 REDIS_WEBUI_CONNECT_HOST=redis
@@ -89,6 +80,7 @@ REDIS_WEBUI_CONNECT_PORT=6379
 REDIS_WEBUI_PORT=9987
 
 ### ELASTIC SEARCH #########################################
+ELASTICSEARCH_HOST_HTTP_PORT=9200
 ELK_VERSION=6.3.1
-ELASTICSEARCH_JAVA_OPTS=-Xms256m -Xmx256m
+ELASTICSEARCH_JAVA_OPTS='-Xms256m -Xmx256m'
 ELASTICSEARCH_HOST_TRANSPORT_PORT=9300
