--- a/compose-files/docker-compose.databases.yml
+++ b/compose-files/docker-compose.databases.yml
@@ -10,19 +10,19 @@ networks:
   backdocker:
     external: true
 
-volumes:
-  mysql:
-    driver: '${VOLUMES_DRIVER}'
-  mariadb:
-    driver: '${VOLUMES_DRIVER}'
-  postgres:
-    driver: '${VOLUMES_DRIVER}'
-  mongo:
-    driver: '${VOLUMES_DRIVER}'
-  redis:
-    driver: '${VOLUMES_DRIVER}'
-  elasticsearch:
-    driver: '${VOLUMES_DRIVER}'
+# volumes:
+#   mysql:
+#     driver: '${VOLUMES_DRIVER}'
+#   mariadb:
+#     driver: '${VOLUMES_DRIVER}'
+#   postgres:
+#     driver: '${VOLUMES_DRIVER}'
+#   mongo:
+#     driver: '${VOLUMES_DRIVER}'
+#   redis:
+#     driver: '${VOLUMES_DRIVER}'
+#   elasticsearch:
+#     driver: '${VOLUMES_DRIVER}'
 
 services:
   ### MySQL ################################################
@@ -89,8 +89,15 @@ services:
       - 'POSTGRES_PASSWORD=${DB_CONFIG_DATABASE_PASSWORD}'
     networks:
       backend: {}
+      # dockernet: {}
       backdocker:
         ipv4_address: 192.168.90.40
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.tcp.routers.postgres.rule=HostSNI(`*`)'
+      - 'traefik.tcp.routers.postgres.entrypoints=postgres'
+      - 'traefik.tcp.routers.postgres.service=postgres'
+      - 'traefik.tcp.services.postgres.loadbalancer.server.port=${POSTGRES_PORT}'
 
   ### MongoDB ##############################################
   mongo:
