--- a/compose-files/docker-compose.mgmt.yml
+++ b/compose-files/docker-compose.mgmt.yml
@@ -12,9 +12,9 @@ networks:
   backdocker:
     external: true
 
-volumes:
-  portainer:
-    driver: '${VOLUMES_DRIVER}'
+# volumes:
+#   portainer:
+#     driver: '${VOLUMES_DRIVER}'
 
 services:
   ### TRAEFIK #########################################
@@ -44,6 +44,7 @@ services:
     ports:
       - '${TRAEFIK_HOST_HTTP_PORT}:80'
       - '${TRAEFIK_HOST_HTTPS_PORT}:443'
+      # - '${POSTGRES_PORT}:${POSTGRES_PORT}'
     networks:
       - dockernet
       - proxy
