feat: update example files

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# IDs - Found from `id` command
+PUID=UserId
+PGID=DockerGroupId
+TZ=Africa/Lusaka
+USERDIR=/home/${USER}
+DOCKERDIR=/home/${USER}/.docker/data
+
 # Location of the application projects
 APP_PROJECTS=/home/${USER}/projects
 APP_CODE_PATH_HOST=../
@@ -9,7 +16,12 @@ NETWORKS_DRIVER=bridge
 # You may add flags to the path `:cached`, `:delegated`.
 APP_CODE_CONTAINER_FLAG=:cached
 
+# sudo apt install acl
+# sudo chown $USER:docker -R ~/.docker/; sudo setfacl -Rdm g:docker:rwx ~/.docker/; sudo chmod -R 775 ~/.docker/
+# sudo chown root:root ~/.docker/data/secrets
+# sudo chmod 600 ~/.docker/data/secrets
 DATA_PATH_HOST=~/.docker/data
+SECRETSDIR=~/.docker/data/secrets
 
 ### Docker compose files ##################################
 
@@ -38,11 +50,13 @@ COMPOSE_FILE=docker-compose.mgmt.yml
 
 ### TRAEFIK #################################################
 
-TRAEFIK_VERSION=2.3
+TRAEFIK_VERSION=2.4
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
 
 ### PORTAINER #############################################
-
-PORTAINER_ADMIN_PASSWORD='[insert password here]'
+# htpasswd -nbB username password | cut -d ":" -f 2
+# echo password | htpasswd -niB username | cut -d ":" -f 2
+# PORTAINER_ADMIN_PASSWORD='[insert password here]'
+PORTAINER_ADMIN_PASSWORD_FILE=/run/secrets/portainer_admin_password
 PORTAINER_UI_PORT=9000
