--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -2,6 +2,9 @@
 
 # NAMECHEAP_API_USER=NamecheapUsername
 # NAMECHEAP_API_KEY=NamecheapAPIKey
+# TRAEFIK_CERTIFICATESRESOLVERS_cloudflareDns_ACME_EMAIL=CloudflareEmail
+# CF_API_EMAIL=CloudflareEmail
+# CF_API_KEY=CloudflareGlobalAPIKey
 # CF_DNS_API_TOKEN=CloudflareZoneAPIToken
 
 # Necessary for a project with a lot of services. Must be the same as
