--- a/traefik/traefik.production.yaml
+++ b/traefik/traefik.production.yaml
@@ -1,6 +1,9 @@
 global:
   checkNewVersion: true
 
+# pilot:
+#   token: 
+
 entryPoints:
   # postgres:
   #   address: ":5432"
@@ -26,6 +29,7 @@ entryPoints:
         - "104.16.0.0/12"
         - "172.64.0.0/13"
         - "131.0.72.0/22"
+
   mysql:
     address: ":3306"
   metrics:
@@ -98,7 +102,8 @@ certificatesResolvers:
 
   cloudflareDns:
     acme:
-      email: email@address.com
+      # Overwritten in .env file
+      # email: email@address.com # Cloudflare email address
       # Staging Server
       # caServer: https://acme-staging-v02.api.letsencrypt.org/directory
       # Production server
@@ -110,4 +115,3 @@ certificatesResolvers:
         resolvers:
           - "1.1.1.1:53"
           - "1.0.0.1:53"
-          - "8.8.8.8:53"
