Add authelia config

--- a/.env.example
+++ b/.env.example
@@ -18,16 +18,12 @@ APP_CODE_CONTAINER_FLAG=:cached
 
 # sudo apt install acl
 # sudo chown $USER:docker -R ~/.docker/; sudo setfacl -Rdm g:docker:rwx ~/.docker/; sudo chmod -R 775 ~/.docker/
-# sudo chown root:root ~/.docker/data/secrets
+# sudo chown $USER:docker ~/.docker/data/secrets
 # sudo chmod 600 ~/.docker/data/secrets
 DATA_PATH_HOST=~/.docker/data
 SECRETSDIR=~/.docker/data/secrets
 
 ### Docker compose files ##################################
-
-# Select which docker-compose files to include.
-COMPOSE_FILE=docker-compose.mgmt.yml:docker-compose.yml
-
 WORKSPACE_TIMEZONE=Africa/Lusaka
 
 # Change the separator from : to ; on Windows
@@ -46,7 +42,7 @@ DOMAIN_NAME=local.test
 ### Docker compose files ##################################
 
 # Select which docker-compose files to include.
-COMPOSE_FILE=docker-compose.mgmt.yml
+COMPOSE_FILE=docker-compose.mgmt.yml:docker-compose.yml
 
 ### TRAEFIK #################################################
 
