--- a/authelia/configuration.example.yml
+++ b/authelia/configuration.example.yml
@@ -5,6 +5,7 @@
 host: 0.0.0.0
 port: 9091
 log_level: warn
+theme: dark
 
 # This secret can also be set using the env variables AUTHELIA_JWT_SECRET_FILE
 # I used this site to generate the secret: https://www.grc.com/passwords.htm
@@ -44,13 +45,13 @@ access_control:
     # Rules applied to everyone
     - domain: authelia.example.com
       policy: bypass
-#    - domain: radarr.example.com
-#      policy: bypass
-#      subject: "group:admins"
-#      resources:
-#      - "^/api/.*$"      
-#    - domain: "*.example.com"
-#      policy: one_factor
+    #    - domain: radarr.example.com
+    #      policy: bypass
+    #      subject: "group:admins"
+    #      resources:
+    #      - "^/api/.*$"
+    #    - domain: "*.example.com"
+    #      policy: one_factor
     - domain: "*.example.com"
       policy: two_factor
     - domain: "example.com"
@@ -69,8 +70,8 @@ session:
 #  redis:
 #    host: redis
 #    port: 6379
-    # This secret can also be set using the env variables AUTHELIA_SESSION_REDIS_PASSWORD_FILE
-    # password: authelia
+# This secret can also be set using the env variables AUTHELIA_SESSION_REDIS_PASSWORD_FILE
+# password: authelia
 
 regulation:
   max_retries: 3
@@ -78,11 +79,11 @@ regulation:
   ban_time: 300
 
 storage:
-# For local storage, uncomment lines below and comment out mysql. https://docs.authelia.com/configuration/storage/sqlite.html
-#  local:
-#    path: /config/db.sqlite3
+  # For local storage, uncomment lines below and comment out mysql. https://docs.authelia.com/configuration/storage/sqlite.html
+  #  local:
+  #    path: /config/db.sqlite3
   mysql:
-  # MySQL allows running multiple authelia instances. Create database and enter details below.
+    # MySQL allows running multiple authelia instances. Create database and enter details below.
     host: MYSQL_HOST
     port: 3306
     database: authelia
