--- a/traefik/example-dynamic/middlewares/middleware-chains.yml
+++ b/traefik/example-dynamic/middlewares/middleware-chains.yml
@@ -11,3 +11,9 @@ http:
           - rate-limit
           - secure-headers
           - basic-auth
+    chain-authelia:
+      chain:
+        middlewares:
+          - rate-limit
+          - secure-headers
+          - authelia
