--- a/traefik/example-dynamic/services/production-traefik-service.yml
+++ b/traefik/example-dynamic/services/production-traefik-service.yml
@@ -5,10 +5,11 @@ http:
       entryPoints:
         - websecure
       tls:
-        certResolver: letsEncryptDns
+        certResolver: cloudflareDns
 
       middlewares:
-        - basic-auth
+        - chain-basic-auth
+        # - basic-auth
         # - secure-headers
         # - rate-limit
       service: api@internal
