--- a/authelia/.env.example
+++ b/authelia/.env.example
@@ -1,7 +1,8 @@
 ### AUTHELIA ##################################
+TZ=$TZ
 AUTHELIA_JWT_SECRET_FILE=/run/secrets/authelia_jwt_secret
-AUTHELIA_DUO_API_SECRET_KEY_FILE=/run/secrets/authelia_duo_api_secret_key
 AUTHELIA_SESSION_SECRET_FILE=/run/secrets/authelia_session_secret
-AUTHELIA_SESSION_REDIS_PASSWORD_FILE=/run/secrets/authelia_session_redis_password
 AUTHELIA_STORAGE_MYSQL_PASSWORD_FILE=/run/secrets/authelia_storage_mysql_password
 AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE=/run/secrets/authelia_notifier_smtp_password
+AUTHELIA_DUO_API_SECRET_KEY_FILE=/run/secrets/authelia_duo_api_secret_key
+# AUTHELIA_SESSION_REDIS_PASSWORD_FILE=/run/secrets/authelia_session_redis_password
