--- a/envs/.mgmt.env
+++ b/envs/.mgmt.env
@@ -5,11 +5,13 @@ COMPOSE_FILE=docker-compose.mgmt.yml
 
 ### TRAEFIK #################################################
 
-TRAEFIK_VERSION=2.3
+TRAEFIK_VERSION=2.4
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
 
 ### PORTAINER #############################################
-
-PORTAINER_ADMIN_PASSWORD='[insert password here]'
+# htpasswd -nbB username password | cut -d ":" -f 2
+# echo password | htpasswd -niB username | cut -d ":" -f 2
+# PORTAINER_ADMIN_PASSWORD='[insert password here]'
+PORTAINER_ADMIN_PASSWORD_FILE=/run/secrets/portainer_admin_password
 PORTAINER_UI_PORT=9000
