--- a/authelia/users_database.example.yml
+++ b/authelia/users_database.example.yml
@@ -1,4 +1,7 @@
+#! This file should be in the config directory
+
 users:
+  # Replace 'username' with the actual username
   username:
     displayname: "John Doe"
     # Password hashing
