--- a/compose-files/docker-compose.authelia.yml
+++ b/compose-files/docker-compose.authelia.yml
@@ -11,8 +11,10 @@ services:
   authelia:
     container_name: authelia
     # image: authelia/authelia:latest
-    image: authelia/authelia:4.21.0
+    image: authelia/authelia:4
     restart: always
+    expose:
+      - 9091
     networks:
       - dockernet
       - backdocker
@@ -26,6 +28,7 @@ services:
     secrets:
       - authelia_jwt_secret
       - authelia_session_secret
+      - authelia_storage_encryption_key
       - authelia_storage_mysql_password
       - authelia_notifier_smtp_password
       - authelia_duo_api_secret_key
@@ -33,20 +36,19 @@ services:
       - 'traefik.enable=true'
       ## HTTP Routers
       - 'traefik.http.routers.authelia.entrypoints=websecure'
-      - 'traefik.http.routers.authelia.rule=HostHeader(`authelia.${DOMAIN_NAME}`)'
+      - 'traefik.http.routers.authelia.rule=Host(`authelia.${DOMAIN_NAME}`)'
       - 'traefik.http.routers.authelia.tls=true'
       - 'traefik.http.routers.authelia.tls.certresolver=cloudflareDns'
-      ## Middlewares
-      - 'traefik.http.routers.authelia.middlewares=chain-authelia@file'
-      ## HTTP Services
-      - 'traefik.http.routers.authelia.service=authelia'
-      - 'traefik.http.services.authelia.loadbalancer.server.port=9091'
+      # Middlewares
+      - 'traefik.http.routers.portainer.middlewares=chain-no-auth@file'
 
 secrets:
   authelia_jwt_secret:
     file: $SECRETSDIR/authelia_jwt_secret
   authelia_session_secret:
     file: $SECRETSDIR/authelia_session_secret
+  authelia_storage_encryption_key:
+    file: $SECRETSDIR/authelia_storage_encryption_key
   authelia_storage_mysql_password:
     file: $SECRETSDIR/authelia_storage_mysql_password
   authelia_notifier_smtp_password:
