--- a/compose-files/docker-compose.authelia.yml
+++ b/compose-files/docker-compose.authelia.yml
@@ -40,7 +40,7 @@ services:
       - 'traefik.http.routers.authelia.tls=true'
       - 'traefik.http.routers.authelia.tls.certresolver=cloudflareDns'
       # Middlewares
-      - 'traefik.http.routers.portainer.middlewares=chain-no-auth@file'
+      - 'traefik.http.routers.authelia.middlewares=chain-no-auth@file'
 
 secrets:
   authelia_jwt_secret:
